# OceanOSSE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pixi.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bugreport.yml  config.yml  newfeature.yml
.github/PULL_REQUEST_TEMPLATE/: feature.md
.github/workflows/: ci.yml  docs.yml
OceanOSSE/: __init__.py  cli.py  pipeline.py  utils.py  validation.py
OceanOSSE/gridding/: regridder.py  regridder_simple.py
OceanOSSE/io/: dataloader.py  datawriter.py
OceanOSSE/sampling/: sampler.py  sampler_nearest_neighbour.py
docs/: zensical.toml
docs/docs/: index.md
examples/: example_config.toml
tests/: conftest.py
tests/integration/: test_example.py
tests/unit/: test_example.py  test_regridder.py  test_sampler.py
